[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/final_form_popup.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://dhtvghbksvbbs" path="res://assets/UI/panel_bg.svg" id="2_panel"]

[node name="FinalFormPopup" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="CenterContainer" type="CenterContainer" parent="Overlay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupBackground" type="NinePatchRect" parent="Overlay/CenterContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
texture = ExtResource("2_panel")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48

[node name="VBox" type="VBoxContainer" parent="Overlay/CenterContainer/PopupBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 24.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="Overlay/CenterContainer/PopupBackground/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.15, 0.1, 1)
theme_override_font_sizes/font_size = 22
text = "Final Form MAX!"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Overlay/CenterContainer/PopupBackground/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.25, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "Collection Progress: 0/0"
horizontal_alignment = 1

[node name="OkButton" type="Button" parent="Overlay/CenterContainer/PopupBackground/VBox"]
custom_minimum_size = Vector2(120, 44)
layout_mode = 2
size_flags_horizontal = 4
modulate = Color(1, 1, 1, 0)
text = "OK"
